# liquidation-bot

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
src/: events.rs  lib.rs  liquidation_bot.rs  liquidator.rs  main.rs  messages.rs  types.rs  utils.rs
src/events/: mod.rs
src/feeds/: coinbase.rs  ethereum_blocks.rs  ithil.rs  messages.rs  mod.rs
tests/: liquidator_tests.rs
